# core/src/types/biodata.ts
@@ -1,12 +1,21 @@
 import { Education } from './education';
 import { Employment } from './employment';
-import { IslamicSchool } from './religion';
+import { IslamicSchools } from './religion';
 import { Gender } from './user';
+
+export interface Contact {
+  country: string;
+  state: string;
+  city: string;
+  address?: string;
+  phone?: string;
+}
 
 export interface BioData {
   gender?: Gender;
   educationHistory: Education[];
   employmentHistory: Employment[];
-  religion: IslamicSchool;
-  description: string
+  religion: IslamicSchools;
+  description: string;
+  contact?: Contact;
 }
